--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,7 +15,10 @@ body{
 .top-bar a{
     color: white;
     text-decoration: none;
-    font-size: 1.7rem;
+    font-size: 1.5rem;
+}
+.top-bar p a:hover{
+    color: #000000;
 }
 /*-----------------------------------------Navigation-----------------------------------------------------------------*/
 .navbar-brand img{
@@ -79,37 +82,76 @@ body{
     
 }
 
-
-
-
-
-
-
-
-
 /*-----------------------------------------Menu-----------------------------------------------------------------*/
+#menu{
+    line-height: 4.5rem;
+    column-count: 4;
+    
+}
+#menu img{
+    width: 100%;
+    height: auto;
+}
+.menu-item{
+    display: inline-block;
+}
+.menu-item :hover{
+    transform: scale(1.3);
+}
+.menu-item h6{
+    text-align: center;
+    font-weight: 600;
+}
 
+@media screen and (max-width: 1393px){
+#menu{
+column-count: 4;
+}
+}
 
+@media screen and (max-width: 943px){
+#menu{
+column-count: 3;
+}
+}
 
-
-
-
-
-
-
-
-
-
+@media screen and (max-width: 800px){
+#menu{
+    column-count: 2;
+}
+}
 
 /*-----------------------------------------Contact-Us-----------------------------------------------------------------*/
+#contact-us{
+    max-width: 70%;
+    text-align: center;
+}
+.address h4{
+    font-size: 3rem;
+}
+.address p{
+    font-size: 1.5rem;
+}
+.address h4:hover{
+    color: #059731;
+}
 
-
-
-
-
-
-
-
+.phone a{
+    font-size: 3rem;
+    color: #000000;
+}
+.phone p a:hover{
+    color: #059731;
+}
+.phone i{
+    font-size: 150%;
+}
+.contact-form{
+    display: block;
+    max-width: 70%;
+    margin: 0 auto;
+    padding-top: 1rem;
+}
 
 /*-----------------------------------------Footer-----------------------------------------------------------------*/
 footer {
