--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -91,7 +91,7 @@ body{
 
 /*-----------------------------------------Menu-----------------------------------------------------------------*/
 #menu{
-    height: 90rem;
+    height: 100%;
     clear: both;
     line-height: 4.5rem;
     column-count: 4;
