--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,6 +12,7 @@ body{
     background: #059731;
     height: 3rem;
     padding: .8rem 0;
+    border-radius: .2rem
 }
 .top-bar a{
     color: white;
@@ -24,8 +25,10 @@ body{
 /*-----------------------------------------Navigation-----------------------------------------------------------------*/
 .navbar-brand img{
     height: 8.5rem;
+    border: .25rem solid #000000;
 }
 .navbar{
+    border-radius: .2rem;
     width: 100%;
     background-color:#e2e5e7;
     font-size: 1.5rem;
@@ -98,6 +101,7 @@ body{
     column-gap: .5rem;
     padding-top: 1rem;
     padding-bottom: 1rem;
+
     
 }
 #menu img{
@@ -107,6 +111,7 @@ body{
 .menu-item{
     width: 100%;
     display: inline-block;
+    margin: 0;
 }
 .menu-item :hover{
     transform: scale(1.3);
@@ -136,34 +141,68 @@ column-count: 3;
 
 /*-----------------------------------------Contact-Us-----------------------------------------------------------------*/
 #contact-us{
-    max-width: 70%;
+    max-width: 100%;
     text-align: center;
+    padding: .5rem;
+}
+.address{
+    padding-top: 1rem;
 }
 .address h4{
     font-size: 3rem;
 }
 .address p{
-    font-size: 1.5rem;
+    font-size: 2rem;
+}
+.address a{
+    color: #000000;
+}
+.address a:hover{
+    color: #059731;
 }
 .address h4:hover{
     color: #059731;
 }
 
 .phone a{
-    font-size: 3rem;
+    font-size: 2rem;
     color: #000000;
 }
 .phone p a:hover{
     color: #059731;
 }
-.phone i{
-    font-size: 150%;
-}
+
 .contact-form{
-    display: block;
-    max-width: 70%;
-    margin: 0 auto;
-    padding-top: 1rem;
+    border-radius: .3rem;
+    background-color: #059731;
+    padding: 1.5rem;
+}
+label{
+    font-size: 1.2rem;
+    font-weight: 500;
+}
+input, textarea{
+    width: 80%;
+    padding: 1rem;
+    border: .1rem solid #000000;
+    border-radius: .4rem;
+    margin-bottom: 1.6rem;
+}
+textarea{
+    height: 10rem;
+}
+button{
+    background-color: #000000;
+    color: white;
+    padding: 1rem 2rem;
+    border: .15rem solid #e2e5e7;
+    border-radius: .4rem;
+    font-size: 1.5rem;
+    font-weight: 500;
+}
+button:hover{
+    background-color: #059731;
+    color: #000000 !important;
 }
 
 /*-----------------------------------------Footer-----------------------------------------------------------------*/
@@ -172,6 +211,7 @@ footer {
     background-color:#e2e5e7;
     position: static;
     text-align: center;
+    border-radius: .2rem
     
 }
  footer p{
