--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -24,8 +24,8 @@ body{
 }
 /*-----------------------------------------Navigation-----------------------------------------------------------------*/
 .navbar-brand img{
-    height: 8.5rem;
-    border: .25rem solid #000000;
+    height: 8.5rem;  
+    border: .20rem solid #000000;
 }
 .navbar{
     border-radius: .2rem;
@@ -85,12 +85,9 @@ body{
     font-size: 1rem;
 }
 .about h3{
-    color: #059731;
+    color: #000000;
 }
-.about h3:hover{
-    color: #000000!important;
-    
-}
+
 
 /*-----------------------------------------Menu-----------------------------------------------------------------*/
 #menu{
@@ -149,7 +146,7 @@ column-count: 3;
     padding-top: 1rem;
 }
 .address h4{
-    font-size: 3rem;
+    font-size: 2rem;
 }
 .address p{
     font-size: 2rem;
@@ -160,10 +157,6 @@ column-count: 3;
 .address a:hover{
     color: #059731;
 }
-.address h4:hover{
-    color: #059731;
-}
-
 .phone a{
     font-size: 2rem;
     color: #000000;
@@ -192,17 +185,18 @@ textarea{
     height: 10rem;
 }
 button{
-    background-color: #000000;
+    background-color: #059731;
     color: white;
     padding: 1rem 2rem;
     border: .15rem solid #e2e5e7;
     border-radius: .4rem;
     font-size: 1.5rem;
     font-weight: 500;
+    text-transform: uppercase;
 }
 button:hover{
-    background-color: #059731;
-    color: #000000 !important;
+    background-color: white;
+    color: #059731 !important;
 }
 
 /*-----------------------------------------Footer-----------------------------------------------------------------*/
@@ -211,20 +205,16 @@ footer {
     background-color:#e2e5e7;
     position: static;
     text-align: center;
-    border-radius: .2rem
-    
+    border-radius: .2rem;
 }
  footer p{
-    text-decoration: underline;
     color: #000000;
     font-size: 1rem;
     font-weight: 500;
+    text-decoration: underline;
 }
 footer p i{
-    color:#059731;
-}
-footer p i:hover{
-    color: #000000;
+    color:#000000;
 }
 .social-networks li {
     display: inline;
